# upower

src/: Makefile.am  up-backend-bsd-private.h
src/bsd/: Makefile.am
src/freebsd/: up-backend.c
src/linux/: up-backend.c  up-device-wup.c
src/openbsd/: up-backend.c
